--- a/personalweb.css
+++ b/personalweb.css
@@ -9,6 +9,7 @@ html{
     --black: rgb(0, 1, 3);
     --jet: rgb(51, 49, 56);
     --red: rgb(255, 49, 46);
+    --border: 5px solid;
 }
 body{
     background-color: var(--jet);
@@ -18,7 +19,24 @@ body{
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    border: 5px solid black;
-
-
+    border: var(--border)
+}
+.headerbar section{
+    width: 350px;
+    display: flex;
+    justify-content: center; /** this might cause problems in navigation */
+    align-items: center;
+}
+#nav{
+    justify-content: space-between;
+}
+#socials{
+    justify-content: space-evenly;
+    
+}
+.socials img{
+    height: 30px;
+}
+.title h1{
+    font-size: 40px;
 }
