cp.2 main title page
checkpoint for main title page

--- a/personalweb.css
+++ b/personalweb.css
@@ -9,7 +9,7 @@ html{
     --black: rgb(0, 1, 3);
     --jet: rgb(51, 49, 56);
     --red: rgb(255, 49, 46);
-    --border: 5px solid;
+    --border: 5px solid white;
 }
 body{
     background-color: var(--black);
@@ -42,7 +42,6 @@ body{
 }
 .mainpagebox{
     height: 1000px;
-    border: var(--border);
     display: flex;
     justify-content: center;
     align-self: center;
@@ -53,4 +52,35 @@ body{
     background-size: contain;
     width: 1600px;
     height: 1600px;
+}
+.topblankspace{
+    height: 160px
+}
+.titlepage{
+    height: 400px;
+    display: flex;
+    flex-flow: column;
+}
+.titlepage section{
+    width: 100%;
+    color: white;
+    display: flex;
+    height: 120px;
+    justify-content: center;
+}
+.row1 h1{
+    font-size: 120px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    
+}
+.row2 h1{
+    font-size: 120px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+}
+.row3 h1{
+    font-size: 120px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
 }
