--- a/personalweb.css
+++ b/personalweb.css
@@ -9,6 +9,8 @@ html{
     --black: rgb(0, 1, 3);
     --jet: rgb(51, 49, 56);
     --red: rgb(255, 49, 46);
+    --indigo: rgb(99, 32, 238);
+    --brightindigo: rgb(191, 187, 238);
     --border: 5px solid white;
 }
 body{
@@ -41,7 +43,7 @@ body{
     background-size: cover;
 }
 .mainpagebox{
-    height: 1000px;
+    height: 2000px;
     display: flex;
     justify-content: center;
     align-self: center;
@@ -51,7 +53,7 @@ body{
     background-repeat: no-repeat;
     background-size: contain;
     width: 1600px;
-    height: 1600px;
+    height: 880px;
 }
 .topblankspace{
     height: 160px
@@ -83,4 +85,5 @@ body{
     font-size: 120px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
+    color: var(--brightindigo);
 }
