refined title page 3

--- a/personalweb.css
+++ b/personalweb.css
@@ -49,11 +49,11 @@ body{
     align-self: center;
 }
 .mainpage{
-    background-image: url(./images/Untitled\ design\ \(1\).png);
+    background-image: url(./images/Untitled\ design\ \(1\)\ copy\ 2.png);
     background-repeat: no-repeat;
     background-size: contain;
     width: 1600px;
-    height: 880px;
+    height: 900px;
 }
 .topblankspace{
     height: 160px
