--- a/about.css
+++ b/about.css
@@ -22,7 +22,7 @@ body{
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    color: white;
+    color: gray;
 }
 .headerbar section{
     width: 350px;
@@ -31,9 +31,15 @@ body{
     font-family: 'Poppins', 'sans-serif';
 }
 .navigation a{
-    font-weight: 300;
-    color: white;
+    font-weight: 550px;
+    color: gray;
     text-decoration: none;
+    font-family: 'Poppins', 'sans-serif';
+    font-size: 23px;
+}
+.navigation a:hover{
+    color: white;
+    transition: color 0.4s ease;
 }
 #nav{
     justify-content: space-between;
