--- a/personalweb.css
+++ b/personalweb.css
@@ -31,9 +31,11 @@ body{
     font-family: 'Poppins', 'sans-serif';
 }
 .navigation a{
-    font-weight: 300;
-    color: white;
+    font-weight: 550px;
+    color: gray;
     text-decoration: none;
+    font-family: 'Poppins', 'sans-serif';
+    font-size: 23px;
 }
 #nav{
     justify-content: space-between;
@@ -41,9 +43,15 @@ body{
 #socials{
     justify-content: space-evenly;
 }
+
+.navigation a:hover{
+    color: white;
+    transition: color 0.4s ease;
+}
 .socials img{
     height: 30px;
-    background-size: cover;
+    background-size:contain;
+    background-repeat: no-repeat ;
 }
 .mainpagebox{
     height: 2000px;
@@ -90,3 +98,4 @@ body{
     font-weight: 300;
     color: var(--brightindigo);
 }
+
